WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285827
REGRESSION (
287037@main
): After calling -[WKWebView closeAllMediaPresentationsWithCompletionHandler:], subsequent attempts to enter fullscreen fail
https://bugs.webkit.org/show_bug.cgi?id=285827
Summary
REGRESSION (287037@main): After calling -[WKWebView closeAllMediaPresentation...
Andy Estes
Reported
2025-01-12 23:31:50 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2025-01-12 23:31:51 PST
<
rdar://problem/140306400
>
Andy Estes
Comment 2
2025-01-12 23:37:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38917
EWS
Comment 3
2025-01-13 17:16:27 PST
Committed
288827@main
(e43905574b53): <
https://commits.webkit.org/288827@main
> Reviewed commits have been landed. Closing PR #38917 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug