REGRESSION (287037@main): After calling -[WKWebView closeAllMediaPresentationsWithCompletionHandler:], subsequent attempts to enter fullscreen fail https://bugs.webkit.org/show_bug.cgi?id=285827 rdar://140306400

Reviewed by Chris Dumez.

WebFullScreenManagerProxy::close() is called when a client calls
-[WKWebView closeAllMediaPresentationsWithCompletionHandler:]. After 287037@main, this results in
WebFullScreenManagerProxy::m_client being incorrectly set to null. As a result, subsequent attempts
to enter fullscreen fail since there is no longer a client when
WebFullScreenManagerProxy::enterFullScreen() is called.

Fixed this by adding WebFullScreenManagerProxy::detachFromClient(). This method explicitly clears
m_client and is called by WebPageProxy::resetState(). Restored WebFullScreenManagerProxy::close() to
its previous behavior.

Manually tested.

* Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp:
(WebKit::WebFullScreenManagerProxy::close):
(WebKit::WebFullScreenManagerProxy::detachFromClient):
* Source/WebKit/UIProcess/WebFullScreenManagerProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetState):

Canonical link: https://commits.webkit.org/288827@main